...

  const HrDisplay({super.key, required this.bpm});

  @override
  Widget build(BuildContext context) {
    return Column(
      key: const Key('hrDisplay'),
      mainAxisSize: MainAxisSize.min,
      children: [
        Text(
          '$bpm',
          style: const TextStyle(
            fontSize: 72,
...
